--- a/assets/SCSS/portfolio.css
+++ b/assets/SCSS/portfolio.css
@@ -61,6 +61,14 @@ body .progetto_due a {
 }
 body .progetto_due img {
   max-width: 500px;
+  margin-top: 40px;
+}
+body footer {
+  text-align: center;
+  margin-top: 40px;
+}
+body footer p {
+  font-size: 20px;
 }
 
 header {
@@ -145,11 +153,6 @@ nav ul li a:hover::before {
 }
 .btn-download:hover {
   background-color: #fffbf4;
-}
-
-footer {
-  text-align: center;
-  margin-top: 40px;
 }
 
 .hamburger {
