--- a/assets/SCSS/portfolio.scss
+++ b/assets/SCSS/portfolio.scss
@@ -94,8 +94,19 @@ body {
 
         img {
             max-width: 500px;
+            margin-top: 40px;
+
         }
     }
+
+    footer {
+        text-align: center;
+        margin-top: 40px;
+
+        p {
+            font-size: 20px;
+        }
+    }   
 }
 
 header {
@@ -191,10 +202,6 @@ nav {
   }
 }
 
-footer {
-    text-align: center;
-    margin-top: 40px;
-    }
 
 
 .hamburger {
