--- a/assets/SCSS/portfolio.scss
+++ b/assets/SCSS/portfolio.scss
@@ -49,64 +49,99 @@ body {
   }
 
   .progetto_uno {
-        margin-top: 80px;
-        
-        h2 {
-            font-family: "Josefin Sans", serif;
-            text-align: center;
-            margin-bottom: 20px;
-            
-        }
-
-        p {
-            font-size: 24px;
-        }
-
-        .img-hotelPomelia {
-            img{
-                max-width: 400px;
-            }
-        }
-    }
-
-    .progetto_due {
-        margin-top: 40px;
-        
-        h2 {
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-
-        a {
-            padding: 15px 30px 15px 20px;
-            text-decoration: none;
-            text-transform: uppercase;
-            color: #fff;
-            border-radius: 36px;
-            background: linear-gradient(310deg, #9B3CB7 0%, #F24474 92.11%);
-            box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.20);
-        }
- 
-
-        img {
-            max-width: 500px;
-            margin-top: 40px;
-
-        }
-    }
-
-    footer {
+    margin-top: 80px;
+    
+    h2 {
+        font-family: "Josefin Sans", serif;
         text-align: center;
-        margin-top: 40px;
+        margin-bottom: 20px;
+        
+    }
 
-        p {
-            font-size: 20px;
+    p {
+        font-size: 24px;
+    }
+
+    .img-hotelPomelia {
+        img{
+            max-width: 400px;
         }
-    }   
+    }
+  }
+
+  .progetto_due {
+    margin-top: 40px;
+    
+    h2 {
+        margin-bottom: 20px;
+    }
+
+    p {
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    a {
+      padding: 15px 30px 15px 20px;
+      text-decoration: none;
+      text-transform: uppercase;
+      color: #fff;
+      border-radius: 36px;
+      background: linear-gradient(310deg, #9B3CB7 0%, #F24474 92.11%);
+      box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.20);
+    }
+
+
+    img {
+      max-width: 400px;
+      margin-top: 40px;
+    
+    }
+  }
+
+  .progetto_tre {
+    margin-top: 40px;
+    
+    h2 {
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+
+    a {
+      padding: 15px 30px 15px 20px;
+      text-decoration: none;
+      text-transform: uppercase;
+      color: #fff;
+      border-radius: 36px;
+      background: linear-gradient(310deg, #9B3CB7 0%, #F24474 92.11%);
+      box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.20);
+    }
+
+
+    img {
+      max-width: 400px;
+      margin-top: 40px;
+    
+      .bookfinder{
+        padding: 20px;
+
+      }
+    }
+  }
+
+
+  footer {
+    text-align: center;
+    margin-top: 40px;
+
+    p {
+        font-size: 20px;
+    }
+  }   
 }
 
 header {
